# rag_api_deploy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rag_config.json  requirements.txt  run.py
core/: rag_updator.py  raptor_core.py
docs/: Qdrant_local.md  task.md
models/: config_models.py  request_models.py  response_models.py
routes/: inference.py  update.py
services/: inference_service.py  raptor_service.py  update_service.py
